--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,15 +1,4 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-
-name: "CodeQL Advanced"
+name: "CodeQL Sovereign Scan"
 
 on:
   push:
@@ -22,14 +11,12 @@ on:
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
-    runs-on: ${{ matrix.language == 'swift' && 'macos-latest' || 'ubuntu-latest' }}
-
+    runs-on: ubuntu-latest
     permissions:
       security-events: write
       packages: read
       actions: read
       contents: read
-
     strategy:
       fail-fast: false
       matrix:
@@ -42,7 +29,6 @@ jobs:
             build-mode: none
           - language: c-cpp
             build-mode: none
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -54,18 +40,5 @@ jobs:
           build-mode: ${{ matrix.build-mode }}
           queries: +security-extended
 
-      - name: Manual Build Step
-        if: ${{ matrix.build-mode == 'manual' }}
-        shell: bash
-        run: |
-          echo 'If you are using a "manual" build mode for one or more of the'
-          echo 'languages you are analyzing, replace this with the commands to build'
-          echo 'your code, for example:'
-          echo '  make bootstrap'
-          echo '  make release'
-          exit 1
-
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:${{ matrix.language }}"
