--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values (e.g. "npm", "pip", "maven", "github-actions")
-    directory: "/"        # Location of package manifests
+  - package-ecosystem: "npm" # JavaScript/Node.js package registry
+    directory: "/"           # Location of package manifests
     schedule:
       interval: "weekly"
