--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -64,12 +64,13 @@ jobs:
         uses: actions/checkout@v4
 
       # -------- Language setups --------
-      - name: Setup Node.js and cache npm
+      - name: Setup Node.js via shared workflow
         if: ${{ matrix.language == 'javascript-typescript' }}
-        uses: actions/setup-node@v4
+        uses: your-org/shared-workflows/.github/workflows/setup-node.yml@main
         with:
-          node-version: 20
+          node-version: 18
           cache: npm
+          cache-dependency-path: package-lock.json
 
       - name: Setup Python and cache pip
         if: ${{ matrix.language == 'python' }}
