--- a/.github/workflows/setup-node.yml
+++ b/.github/workflows/setup-node.yml
@@ -5,17 +5,14 @@ on:
     inputs:
       node-version:
         description: 'Node.js version (SemVer or alias)'
-        required: false
         default: '18'
         type: string
       cache:
         description: 'Package manager to cache (npm, yarn, pnpm)'
-        required: false
         default: 'npm'
         type: string
       cache-dependency-path:
         description: 'Path(s) to dependency file(s) for caching'
-        required: false
         default: 'package-lock.json'
         type: string
 
@@ -36,6 +33,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Run tests
+        run: npm test
 
       - name: Run tests
         run: npm test
