--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,6 +47,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 👇 Only for the JS/TS lineage: seal dependencies before scan
+      - name: Setup Node.js
+        if: ${{ matrix.language == 'javascript-typescript' }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+
+      - name: Install dependencies
+        if: ${{ matrix.language == 'javascript-typescript' }}
+        run: npm ci
+
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
