--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,18 +36,11 @@ jobs:
         include:
           - language: javascript-typescript
             build-mode: none
-          - language: python
-            build-mode: none
-          - language: rust
-            build-mode: none
-          - language: c-cpp
-            build-mode: none
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 👇 Only for the JS/TS lineage: seal dependencies before scan
       - name: Setup Node.js
         if: ${{ matrix.language == 'javascript-typescript' }}
         uses: actions/setup-node@v4
@@ -55,11 +48,14 @@ jobs:
           node-version: 18
           cache: npm
 
+      - name: Set up npm auth
+        if: ${{ matrix.language == 'javascript-typescript' }}
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
       - name: Install dependencies
         if: ${{ matrix.language == 'javascript-typescript' }}
         run: npm ci
 
-      # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
@@ -67,14 +63,12 @@ jobs:
           build-mode: ${{ matrix.build-mode }}
           queries: +security-extended
 
-      # Optional manual build step for compiled languages
       - name: Manual Build Step
         if: ${{ matrix.build-mode == 'manual' }}
         shell: bash
         run: |
           echo 'If you are using a "manual" build mode for one or more of the'
           echo 'languages you are analyzing, replace this with the commands to build'
-          echo 'your code, for example:'
           echo '  make bootstrap'
           echo '  make release'
           exit 1
