--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vc001/core",
+  "name": "@visionarycrest-vc001/core",
   "version": "1.0.0",
   "main": "index.js",
   "description": "Core logic for VisionaryCrest‑001",
@@ -7,5 +7,10 @@
     "build": "node build.js",
     "test": "jest"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "author": "Visionary Inc.",
+  "license": "MIT",
   "dependencies": {}
 }
