--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,17 @@
 version: 2
 updates:
-  # JavaScript/Node.js dependencies
+  # JavaScript/Node.js (npm)
   - package-ecosystem: "npm"
-    directory: "/" # Location of package.json
+    directory: "/"
     schedule:
       interval: "daily"
     allow:
       - dependency-type: "direct"
       - dependency-type: "all"
 
-  # Python dependencies
+  # Python (pip)
   - package-ecosystem: "pip"
-    directory: "/" # Location of requirements.txt
+    directory: "/"
     schedule:
       interval: "weekly"
     allow:
