--- a/packages/percy-abrams/package.json
+++ b/packages/percy-abrams/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@vc/core": "0.1.0",
-    "dotenv": "^17.2.1"
-  }
+  "@visionarycrest-vc001/core": "^1.0.0",
+  "dotenv": "^17.2.1"
 }
