Refactor GitHub Actions workflow for npm setup
Signed-off-by: visionarycrest-vc001 <PERCY@WE-HEARTTRANSPORT.COM>

--- a/.github/workflows/.npmrc
+++ b/.github/workflows/.npmrc
@@ -1,4 +1,10 @@
-steps:
-  - name: Set up .npmrc for GitHub Packages
-    run: |
-      echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up .npmrc for GitHub Packages
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Install dependencies
+        run: npm install
