--- a/packages/percy-abrams/package.json
+++ b/packages/percy-abrams/package.json
@@ -2,8 +2,16 @@
   "name": "percy-abrams",
   "version": "1.0.0",
   "type": "module",
+  "description": "Percy Abrams package for Visionary Crest VC001. Provides ceremonial and operational features, depends on shared core package.",
+  "author": "Visionary Crest VC001",
+  "license": "MIT",
   "dependencies": {
     "@visionarycrest-vc001/core": "^1.0.0",
     "dotenv": "^17.2.1"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "test": "jest"
   }
 }
