--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,6 @@ on:
     - cron: '0 4 * * *'  # Daily security and dependency checks at 04:00 UTC
   workflow_dispatch:  # Allow manual triggering
 
-# 🔒 Security: Restrict permissions to minimum required
 permissions:
   contents: write
   security-events: write
@@ -245,5 +244,21 @@ jobs:
     name: 📚 Documentation Deployment
     runs-on: ubuntu-latest
     needs: [quality-check, security-scan]
-    if: github.ref == 'refs/heads/main' && github.event_name == '
-
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 📄 Generate documentation (JSDoc)
+        run: |
+          if [ -f "jsdoc.json" ]; then
+            npx jsdoc -c jsdoc.json
+          else
+            echo "⚠️ No JSDoc config found, skipping documentation generation."
+          fi
+
+      - name: 🚀 Deploy docs to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
