--- a/.github/workflows/setup-node.yml
+++ b/.github/workflows/setup-node.yml
@@ -8,7 +8,11 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '18.x'
-      - run: npm install
+      - name: Install dependencies for percy-abrams
+        run: |
+          cd packages/percy-abrams
+          npm install
