Update package.json with new configuration

--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-{
-  "name": "vc-ecosystem",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "scripts": {
-    "build": "echo \"add app builds here\"",
-    "lint": "eslint .",
-    "test": "jest --passWithNoTests",
-    "validate:data": "node scripts/generate-timeline.js && node .github/tools/validate-json.js"
-  },
-  "devDependencies": {
-    "ajv": "^8.12.0",
-    "ajv-formats": "^3.0.1",
-    "eslint": "^9.0.0",
-    "jest": "^30.1.2"
-  }
-}
+{\n  "name": "VC001-Sovereign-Token",\n  "version": "1.0.0",\n  "private": true,\n  "workspaces": [\n    "apps/*",\n    "packages/*"\n  ],\n  "scripts": {\n    "build": "echo \"add app builds here\"",\n    "lint": "eslint .",\n    "test": "jest --passWithNoTests",\n    "validate:data": "node scripts/generate-timeline.js && node .github/tools/validate-json.js"\n  },\n  "devDependencies": {\n    "ajv": "^8.12.0",\n    "ajv-formats": "^3.0.1",\n    "eslint": "^9.0.0",\n    "jest": "^30.1.2"\n  }\n}
