--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ dist/
 # Logs and temp
 *.log
 *.tmp
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
 
 # Editor configs
 .vscode/
@@ -14,8 +18,28 @@ dist/
 
 # CI artifacts
 coverage/
+build/
 *.lock
+*.tsbuildinfo
 
 # Legacy Windows artifacts (optional)
 Thumbs.db
 Desktop.ini
+
+# Environment files
+.env.local
+.env.*.local
+
+# Misc
+*.swp
+*.swo
+test-output/
+secrets.json
+*.sh~
+
+# Python artifacts
+__pycache__/
+*.pyc
+
+# HTML/CSS/JS build artifacts
+*.map
