--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,81 +7,64 @@ on:
     branches: [main]
 
 jobs:
-  lint:
-    name: lint
+  lint-and-quality:
+    name: Lint & Quality Checks
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Linting code..."
-
-  build:
-    name: build
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Building project..."
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: npm ci
+      - run: npm run lint         # ESLint for JS/TS
+      - run: npm run format:check # Prettier format check
 
   test:
-    name: test
+    name: Run Tests
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Running tests..."
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: npm ci
+      - run: npm test             # Jest for JS/TS (adjust if using another test runner)
 
-  publish:
-    name: publish
+  build:
+    name: Build Project
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Publishing artifacts..."
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: npm ci
+      - run: npm run build        # Add this if you have a build step
 
-  quality-check:
-    name: quality-check
+  security:
+    name: Security Scan
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Checking code quality..."
-
-  documentation:
-    name: documentation
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Generating documentation..."
-
-  security-scan:
-    name: security-scan
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Scanning for security issues..."
-
-  copilot-auto-fix:
-    name: copilot-auto-fix
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Applying Copilot auto-fixes..."
-
-  super-lint:
-    name: super-lint
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running super-lint..."
-
-  ultimate-code-quality-automation:
-    name: Ultimate Code Quality & Automation
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Performing ultimate code quality and automation checks..."
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: npm ci
+      - run: npx npm audit        # Check for vulnerabilities
 
   deploy:
-    name: deploy
+    name: Deploy to Production
     runs-on: ubuntu-latest
     needs:
-      - lint
-      - build
+      - lint-and-quality
       - test
-      - publish
-      - quality-check
-      - documentation
-      - security-scan
-      - copilot-auto-fix
-      - super-lint
-      - ultimate-code-quality-automation
+      - build
+      - security
     environment:
-      name: production  # <-- Make sure this matches your GitHub Environment Settings exactly!
+      name: production
     steps:
-      - run: echo "Deploying to production environment..."
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+      - run: echo "Deploy scripts go here" # Replace with actual deploy commands
