Update workflow name to include rocket emoji
Signed-off-by: visionarycrest-vc001 <PERCY@WE-HEARTTRANSPORT.COM>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@
 # - Dependabot integration support
 # - Package publishing with proper authentication
 
-name: "🔮 Ultimate Code Quality & Automation"
+name: # 🚀 Ultimate Code Quality & Automation Workflow
 
 on:
   push:
