--- a/.github/workflows/setup-node.yml
+++ b/.github/workflows/setup-node.yml
@@ -9,8 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '18.x'
-      - name: Install dependencies for all workspaces
-        run: npm install
+
+      - name: Setup Yarn
+        uses: Borales/actions-yarn@v4
+        with:
+          cmd: install
+
+      - name: Cache Yarn
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/node_modules
+            .yarn/cache
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Build
+        run: yarn build
+
+      - name: Test
+        run: yarn test
