--- a/.github/workflows/setup-node.yml
+++ b/.github/workflows/setup-node.yml
@@ -29,8 +29,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Build
+      - name: Build root package
         run: yarn build
 
-      - name: Test
+      - name: Test root package
         run: yarn test
+
+      - name: Build all workspaces
+        run: yarn workspaces run build
+
+      - name: Test all workspaces
+        run: yarn workspaces run test
