--- a/.github/workflows/repo-organize.yml
+++ b/.github/workflows/repo-organize.yml
@@ -28,4 +28,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: auto-organize repo structure"
-          branch: ${{ github.ref }}
+          branch: main   # Use 'main' explicitly!
